<resources>
    <string name="app_name">MadLevel6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="popular_movies_search">The most popular movies of</string>
    <string name="year_input_label">year</string>
    <string name="submit">Submit</string>
    <string name="img_movie_description">Movie description</string>
    <string name="img_cover">Movie cover</string>
    <string name="movie_banner">Movie banner</string>
    <string name="movie_rating">Movie rating</string>
    <string name="movie_description_title">Overview</string>
</resources>